--- a/BarcodeCaptureSettingsSample/android/app/build.gradle
+++ b/BarcodeCaptureSettingsSample/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.scandit.flutter.bcsettings"
+        applicationId "com.alm.app"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
